template.yml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  EnvironmentName:
    Type: String
    Default: "production"
    Description: The name of the environment for Elastic Beanstalk.
  DBPassword:
    Type: String
    NoEcho: true
    Default: "hello12345"
    Description: The password for the RDS database.

Resources:
  # VPC
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: "my-vpc"

  # Public Subnet in AZ 1
  PublicSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "public-subnet-az1"

  # Private Subnet in AZ 1
  PrivateSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: "private-subnet-az1"

  # Public Subnet in AZ 2
  PublicSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "public-subnet-az2"

  # Private Subnet in AZ 2
  PrivateSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "10.0.4.0/24"
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: "private-subnet-az2"

  # Security Group for EC2
  MyEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP and SSH access"
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
  

  # Elastic Beanstalk Application
  MyElasticBeanstalkApplication:
    Type: AWS::ElasticBeanstalk::Application
    Properties:
      ApplicationName: "my-ecommerce-app"

  MyElasticBeanstalkEnvironment:
    Type: AWS::ElasticBeanstalk::Environment
    DependsOn: MyRDSInstance # If you have RDS
    Properties:
      EnvironmentName: !Ref EnvironmentName
      ApplicationName: !Ref MyElasticBeanstalkApplication
      SolutionStackName: "64bit Amazon Linux 2 v4.0.6 running Docker" # Or latest
      OptionSettings:
        - Namespace: "aws:autoscaling:asg"
          OptionName: "MinSize"
          Value: "1"
        - Namespace: "aws:autoscaling:asg"
          OptionName: "MaxSize"
          Value: "1"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "DockerImage"
          Value: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/ecomm-app-repo' 
        - Namespace: aws:ec2:vpc
          OptionName: VPCId
          Value: !Ref MyVPC # If you have a VPC
        - Namespace: aws:ec2:vpc
          OptionName: Subnets
          Value: !Join [ ',', [ !Ref PublicSubnetAZ1, !Ref PublicSubnetAZ2 ] ] # If you have a VPC
        - Namespace: aws:elasticbeanstalk:environment
          OptionName: LoadBalancerType
          Value: single-instance # Or 'none' if you don't want a load balancer

  # RDS Database Instance (free-tier eligible db.t2.micro)
  MyRDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: "my-rds-instance"
      Engine: "mysql"
      EngineVersion: "8.4.3"  # Use a supported version
      DBInstanceClass: "db.t4g.micro"
      AllocatedStorage: 20
      MasterUsername: "admin"
      MasterUserPassword: !Ref DBPassword
      DBName: "ecommerce"
      VPCSecurityGroups:
        - !Ref MyEC2SecurityGroup
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref MyDBSubnetGroup
      MultiAZ: false

  # DB Subnet Group
  MyDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnets for RDS"
      SubnetIds:
        - !Ref PrivateSubnetAZ1
        - !Ref PrivateSubnetAZ2  # Add second private subnet in AZ 2
      Tags:
        - Key: "Name"
          Value: "my-db-subnet-group"

  # S3 Bucket for static files (images)
  MyS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: "my-ecommerce-static-files"
      VersioningConfiguration:
        Status: "Enabled"
      Tags:
        - Key: "Name"
          Value: "my-ecommerce-static-files"

Outputs:
  VPCId:
    Description: "VPC ID"
    Value: !Ref MyVPC
  RDSInstanceEndpoint:
    Description: "RDS Instance Endpoint"
    Value: !GetAtt MyRDSInstance.Endpoint.Address
  S3BucketName:
    Description: "S3 Bucket Name"
    Value: !Ref MyS3Bucket
